--- a/recipes/data/ecosystem.config
+++ b/recipes/data/ecosystem.config
@@ -1,6 +1,17 @@
 {
   "servers": [
     {
+      "name": "Cloudflare-Roughtime",
+      "publicKeyType": "ed25519",
+      "publicKey": "gD63hSj3ScS+wuOeGrubXlq35N1c5Lby/S+T7MNTjxo=",
+      "addresses": [
+        {
+          "protocol": "udp",
+          "address": "roughtime.cloudflare.com:2002"
+        }
+      ]
+    },
+    {
       "name": "Google-Sandbox-Roughtime",
       "publicKeyType": "ed25519",
       "publicKey": "etPaaIxcBMY1oUeGpwvPMCJMwlRVNxv51KK/tktoJTQ=",
@@ -12,13 +23,13 @@
       ]
     },
     {
-      "name": "Cloudflare-Roughtime",
+      "name": "int08h",
       "publicKeyType": "ed25519",
-      "publicKey": "gD63hSj3ScS+wuOeGrubXlq35N1c5Lby/S+T7MNTjxo=",
+      "publicKey": "AW5uAoTSTDfG5NfY1bTh08GUnOqlRb+HVhbJ3ODJvsE=",
       "addresses": [
         {
           "protocol": "udp",
-          "address": "roughtime.cloudflare.com:2002"
+          "address": "roughtime.int08h.com:2002"
         }
       ]
     }
