Rename int08h Roughtime server

--- a/ecosystem.config
+++ b/ecosystem.config
@@ -23,7 +23,7 @@
       ]
     },
     {
-      "name": "int08h",
+      "name": "int08h-Roughtime",
       "publicKeyType": "ed25519",
       "publicKey": "AW5uAoTSTDfG5NfY1bTh08GUnOqlRb+HVhbJ3ODJvsE=",
       "addresses": [
