workflows: update golangci version and use goinstall
Signed-off-by: Arjun <pkillarjun@protonmail.com>

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -92,6 +92,7 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v4
       - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v3
+        uses: golangci/golangci-lint-action@v6.1.1
         with:
-          version: v1.54
+          version: v1.62.0
+          install-mode: goinstall
